update checkbox with reflex action

--- a/app/views/lists/_list.html.erb
+++ b/app/views/lists/_list.html.erb
@@ -1,5 +1,5 @@
 <div class="row justify-content-center my-3">
-  <div class="col-6">
+  <div class="col-10 col-lg-6">
     <div class="card">
       <div class="card-header"><%= list.name %></div>
       <div class="card-body p-0">
@@ -10,7 +10,12 @@
                 <div class="list-group-item"><%= task.name %></div>
               </del>
             <% else %>
-                <div class="list-group-item"><%= task.name %></div>
+              <div class="list-group-item" data-controller="task">
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="<%= dom_id(task) %>" data-reflex="change->task#complete">
+                  <label for="<%= dom_id(task) %>" class="custom-control-label"><%= task.name %></label>
+                </div>
+              </div>
             <% end %>
           <% end %>
         </div>
