--- a/app/views/lists/_list.html.erb
+++ b/app/views/lists/_list.html.erb
@@ -8,11 +8,9 @@
         </div>
       </div>
       <div class="card-footer">
-        <%= form_with(model: Task.new, url: tasks_path, data: { reflex: 'submit->List#create_task', list_target: 'form', list_id: list.id }) do |form| %>
-          <div class="form-group d-flex flex-fill">
-            <%= form.text_field :name, required: true, class: 'w-100', placeholder: 'What needs to be done?', data: { list_target: 'input' } %>
-            <%= form.submit 'Add task' %>
-          </div>
+        <%= bootstrap_form_with(model: @new_task, url: '', layout: :inline, id: dom_id(list), data: { reflex: 'submit->List#create_task', list_target: 'form', list_id: list.id }) do |form| %>
+          <%= form.text_field :name, wrapper_class: 'flex-fill mr-2 w-100', skip_label: true, placeholder: 'What needs to be done?', data: { list_target: 'input' } %>
+          <%= form.submit 'Add task' %>
         <% end %>
       </div>
     </div>
