--- a/app/views/lists/_list.html.erb
+++ b/app/views/lists/_list.html.erb
@@ -3,7 +3,7 @@
     <div class="card">
       <div class="card-header"><%= list.name %></div>
       <div class="card-body p-0">
-        <div class="list-group-flush">
+        <div class="list-group-flush" data-list-target="tasks">
           <%= render list.tasks.active.incomplete_first %>
         </div>
       </div>
