reorder active tasks and preserve task order

--- a/app/views/lists/_list.html.erb
+++ b/app/views/lists/_list.html.erb
@@ -4,7 +4,7 @@
       <div class="card-header"><%= list.name %></div>
       <div class="card-body p-0">
         <div class="list-group-flush" data-list-target="tasks">
-          <%= render list.tasks.active.incomplete_first %>
+          <%= render list.tasks.active %>
         </div>
       </div>
       <div class="card-footer">
