--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,1 +1,5 @@
-<%= render @lists %>
+<%= link_to 'New List', new_list_path, remote: true, class: 'btn btn-primary mt-3' %>
+
+<div id="lists">
+  <%= render @lists %>
+</div>
