--- a/app/views/lists/_list.html.erb
+++ b/app/views/lists/_list.html.erb
@@ -1,4 +1,4 @@
-<div class="row my-3" data-controller="list" id="<%= dom_id(list) %>">
+<div class="row my-3" data-controller="list" id="<%= dom_id(list) %>" data-reflex-root="#<%= dom_id(list) %>">
   <div class="col">
     <div class="card">
       <div class="card-header d-flex justify-content-between">
