subscribe to TaskChannel with id using task_id from stimulus controller

--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -13,7 +13,7 @@
   <%= render @task.comments.order(created_at: :asc) %>
 </div>
 
-<div class="card">
+<div class="card" data-controller="comments" data-comments-task-id-value="<%= @task.id %>">
   <div class="card-header"></div>
   <div class="card-body">
     <%= bootstrap_form_with(model: @new_comment, url: list_task_comments_path(@task.list, @task)) do |form| %>
