reset and re-focus comments form

--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -13,12 +13,4 @@
   <%= render @task.comments.order(created_at: :asc) %>
 </div>
 
-<div class="card" data-controller="comments" data-comments-task-id-value="<%= @task.id %>">
-  <div class="card-header"></div>
-  <div class="card-body">
-    <%= bootstrap_form_with(model: @new_comment, url: list_task_comments_path(@task.list, @task)) do |form| %>
-      <%= form.text_area :body, skip_label: true %>
-      <%= form.primary %>
-    <% end %>
-  </div>
-</div>
+<%= render 'comments/create_form', new_comment: @new_comment, task: @task %>
