fix duplicate ids bug

--- a/app/views/lists/_list.html.erb
+++ b/app/views/lists/_list.html.erb
@@ -15,7 +15,7 @@
         </div>
       </div>
       <div class="card-footer">
-        <%= bootstrap_form_with(model: @new_task, url: '', layout: :inline, id: dom_id(list), data: { reflex: 'submit->List#create_task', list_target: 'form', list_id: list.id }) do |form| %>
+        <%= bootstrap_form_with(model: @new_task, url: '', layout: :inline, id: "#{dom_id(list)}_form", data: { reflex: 'submit->List#create_task', list_target: 'form', list_id: list.id }) do |form| %>
           <div class="form-group d-flex">
             <%= form.text_field :name, wrapper: false, skip_label: true, placeholder: 'What needs to be done?', class: 'task-name-input', data: { list_target: 'input' }, style: 'margin-right: 0.5rem;' %>
             <%= form.primary 'Add task' %>
